tests/parser-test-files/parse-return.txt
================================================================================
1 return, zero argument, default to Unit
================================================================================

(package coalton-unit-tests)

(define (f)
  (return))

================================================================================
101 return, trailing junk
================================================================================

(package test-package)

(define x (return y z))

--------------------------------------------------------------------------------

error: Malformed return expression
  --> test:3:20
   |
 3 |  (define x (return y z))
   |                      ^ unexpected trailing form
